--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -21,7 +21,7 @@
   <img src="images/pci.jpg" height="250" class="epic">
   <p class="third">Hi, I'm Mark. I am 17 and currently a senior at Shorewood Highschool.</p>
   <h2>Interests</h2>
-  <p>I love riding my bike. For the past 2 years I have finished 3rd overall on my NICA seris.
+  <p>I love riding my bike. For the past 2 years I have finished 3rd overall on my NICA series.
   I also love playing video games and hanging out with my friends</p>
   <h2>Music</h2>
   <p> I really am not that picky, unless it's contry, which I can't stand. My favorites though are definitely is R&B, ALT, and POP.</p>
